# MSFS-Flight-Data-Recorder

./: .gitattributes  .gitignore  CMakeLists.txt  MSFS-Flight-Data-Recorder.sln  README.md
MSFS-Flight-Data-Recorder/: MSFS-Flight-Data-Recorder.cpp  MSFS-Flight-Data-Recorder.vcxproj  MSFS-Flight-Data-Recorder.vcxproj.filters  app_settings.cpp  app_settings.h  charts_panel.cpp  charts_panel.h  data_table_panel.cpp  data_table_panel.h  db.cpp  db.h  db_history.cpp  db_history.h  gui_notify.h  live_status_panel.cpp  live_status_panel.h  logger.cpp  logger.h  logger_c.h  main.cpp  main_window.cpp  main_window.h  map_bridge.cpp  map_bridge.h  map_widget.cpp  map_widget.h  recorder.cpp  recorder.h  recorder_bridge.cpp  recorder_bridge.h  simconnect_defs.h  trajectory_view.cpp  trajectory_view.h  trip_data_fields.h  trip_dataset.h  trip_history_panel.cpp  trip_history_panel.h  types.h
MSFS-Flight-Data-Recorder/resources/: app.qrc  charts.qrc  charts_panel.qml  map.html  map.qrc
MSFS-Flight-Data-Recorder/sqlite3/: sqlite3.exp  sqlite3.lib
